// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Controlled 1`] = `
<form style="<removed>">
  <div>
    <input
      placeholder
      id="<removed>"
      aria-label="Søk"
      type="search"
      value
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
  <div style="<removed>">
    <p
      data-variant="default"
      data-size="sm"
    >
      Hurtigsøk:
    </p>
    <button type="button">
      Læreplaner
    </button>
    <button type="button">
      Skole
    </button>
    <button type="button">
      Eksamen
    </button>
  </div>
</form>
`;

exports[`Form 1`] = `
<form>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
</form>
`;

exports[`Live Search 1`] = `
<div>
  <input
    placeholder
    aria-label="Søk"
    type="search"
    value
  >
  <button
    data-icon="true"
    data-variant="tertiary"
    type="reset"
    aria-label="Tøm"
  >
  </button>
</div>
`;

exports[`Preview 1`] = `
<form>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
</form>
`;

exports[`Variants 1`] = `
<div>
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
  </div>
  <hr
    aria-hidden="true"
    style="<removed>"
  >
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
  <hr
    aria-hidden="true"
    style="<removed>"
  >
  <div>
    <input
      placeholder
      aria-label="Søk"
      type="search"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="secondary"
      type="submit"
    >
      Søk
    </button>
  </div>
</div>
`;

exports[`With Label 1`] = `
<ds-field>
  <label
    data-weight="medium"
    for="<removed>"
  >
    Søk i læreplaner
  </label>
  <div>
    <input
      placeholder
      type="search"
      name="cat-search"
      id="<removed>"
    >
    <button
      data-icon="true"
      data-variant="tertiary"
      type="reset"
      aria-label="Tøm"
    >
    </button>
    <button
      data-variant="primary"
      type="submit"
    >
      Søk
    </button>
  </div>
</ds-field>
`;
